--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,4 +3,16 @@ services:
     build: server/
     ports:
       - "3000:3000"
+    depends_on:
+      - db
+  db:
+    image: postgres:9.6
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: malkauns
+    volumes:
+      - ./db:/var/lib/postgresql/data
         
